--- a/apps/website/app/scss/components/_form.scss
+++ b/apps/website/app/scss/components/_form.scss
@@ -403,7 +403,7 @@ input:-webkit-autofill {
 
   &__digits {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 10px;
     margin-bottom: 30px;
 
